# resume-customizer

./: .gitignore  .gitmodules  main.py  pyproject.toml
src/: main.bat  main.py  text_extraction.py
