[project]
name = "resume-customizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "pypdf>=5.8.0",
    "requests>=2.32.3",
    "ollama>=0.6.0",
    "tqdm>=4.68.4",
]
